--- a/deploy/src/app/globals.css
+++ b/deploy/src/app/globals.css
@@ -14,8 +14,10 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    /* --background: #0a0a0a; */
+    --background: #ededed;
+    /* --foreground: #ededed; */
+    --foreground: #0a0a0a;
   }
 }
 
